fixes zoom bug causing top row of images to not be visible on scroll

--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  height: 100%;
+  min-height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
